--- a/src/net/Makefile
+++ b/src/net/Makefile
@@ -7,7 +7,7 @@ include ../config.mk
 LDFLAGS += $(CUDA_LDFLAGS)
 LDLIBS += $(CUDA_LDLIBS)
 
-TESTFILES = nnet-precondition-online-test.o
+TESTFILES = 
 
 OBJFILES = net.o layer.o ce-loss.o ctc-loss.o class-prior.o nnet-precondition.o nnet-precondition-online.o 
 
